tests/corpus/pass/lexparse/017_float_scientific.gw
fn t() -> u0 { let x: f64 = 1.0e9; }
