tests/corpus/fail/lexparse/f01_missing_semi.gw
fn t() -> u0 { let x = 1 }
